--- a/web/index.html
+++ b/web/index.html
@@ -37,12 +37,17 @@
     // The value below is injected by flutter build, do not touch.
     var serviceWorkerVersion = null;
 
+
     </script>
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer></script>
 
 </head>
 <body>
+<script type="text/javascript">
+    window.flutterWebRenderer = "html";
+
+</script>
 <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
@@ -56,6 +61,7 @@
         return appRunner.runApp();
       });
     });
+
 
 </script>
 </body>
